# survive-rust

./: .gitignore  Cargo.toml  GEMINI.md  LICENSE  README.md
.githooks/: pre-commit
src/: commands.rs  engine.rs  events.rs  lib.rs  main.rs  status.rs  ui.rs
tests/: game_loop.rs
tests/features/: game_loop.feature  gather.feature  gather_events.feature  inventory.feature  rest.feature  save_load.feature  status.feature
