[package]
name = "survive-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[dev-dependencies]
cucumber = "0.21"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[[test]]
name = "game_loop"
harness = false  # allows Cucumber to print output instead of libtest
